--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -10,12 +10,18 @@
 	href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 <link rel="stylesheet"
 	href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet"
+	href="https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css"></link>
+
 <script
 	src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script
 	src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 <script
+	src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"></script>
+<script
 	src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
 <style>
 .bs-example {
 	margin: 20px;
@@ -23,6 +29,17 @@
 
 .accordion .fa {
 	margin-right: 0.5rem;
+}
+
+.my-custom-scrollbar {
+	position: relative;
+	height: 200px;
+	overflow: auto;
+}
+
+.table-wrapper-scroll-y {
+	display: block;
+	table-layout: fixed;
 }
 </style>
 <script>
@@ -49,12 +66,13 @@
 									.removeClass("fa-minus")
 									.addClass("fa-plus");
 						});
+
 			});
 </script>
 </head>
 <body>
 	<div class="container">
-		<div class="jumbotron text-center">
+		<div class="jumbotron text-center" style="padding: 3%;">
 			<h1>Coranavirus Live Tracker Application(COVID-19)</h1>
 			<h3>Global Cases</h3>
 		</div>
@@ -68,40 +86,29 @@
 						th:text="${totalConfirmedReportedCases}" style="color: red;"></h1>
 					<ul class="list-unstyled mt-3 mb-4">
 						<li>New cases reported since previous day</li>
-						<h4 th:text="${totalConfirmedReportedNewCases}"
-							style="color: red;"></h4>
+						<h3 th:text="${totalConfirmedReportedNewCases}"
+							style="color: red;"></h3>
 					</ul>
-					<div class="bs-example">
-						<div class="accordion" id="accordionExample">
-							<div class="card">
-								<ul class="list-unstyled mt-3 mb-4">
-									<li>Confirmed Cases by Country/Region</li>
-								</ul>
-								<!-- <li th:each="confCases : ${confirmedCasesByCountry}"> -->
-								<div class="card-header" id="headingOne">
-									<h2 class="mb-0">
-										<button type="button" class="btn btn-link"
-											data-toggle="collapse" data-target="#collapseOne">
-											<i class="fa fa-plus"></i> View Details
-										</button>
-									</h2>
-								</div>
-								<div id="collapseOne" class="collapse"
-									aria-labelledby="headingOne" data-parent="#accordionExample">
-
-									<div class="table-responsive">
-										<table class="table table-striped table-sm table-hover">
-											<tbody>
-												<tr th:each="confCases : ${confirmedCasesByCountry}">
-													<td th:text="${confCases.country}"></td>
-													<td th:text="${confCases.totalCases}">0</td>
-												</tr>
-											</tbody>
-										</table>
-									</div>
-								</div>
-							</div>
-						</div>
+					<ul class="list-unstyled mt-3 mb-4">
+						<li style="color: red; font-size: medium;">Confirmed Cases by
+							Country/Region</li>
+					</ul>
+					<div class="table-wrapper-scroll-y my-custom-scrollbar">
+						<table id="dtTotalConfirmedCase"
+							class="table table-striped table-bordered table-sm table-hover">
+							<thead>
+								<tr>
+									<th>Country</th>
+									<th>Total Cases</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr th:each="confCases : ${confirmedCasesByCountry}">
+									<td th:text="${confCases.country}"></td>
+									<td th:text="${confCases.totalCases}">0</td>
+								</tr>
+							</tbody>
+						</table>
 					</div>
 				</div>
 			</div>
@@ -114,40 +121,28 @@
 						th:text="${totalDeathReportedCases}" style="color: orange;"></h1>
 					<ul class="list-unstyled mt-3 mb-4">
 						<li>New cases reported since previous day</li>
-						<h4 th:text="${totalDeathReportedNewCases}" style="color: orange;"></h4>
+						<h3 th:text="${totalDeathReportedNewCases}" style="color: orange;"></h3>
 					</ul>
-
-					<div class="bs-example">
-						<div class="accordion" id="accordionExample">
-							<div class="card">
-								<ul class="list-unstyled mt-3 mb-4">
-									<li>Confirmed Cases by Country/Region</li>
-								</ul>
-								<!-- <li th:each="confCases : ${confirmedCasesByCountry}"> -->
-								<div class="card-header" id="headingTwo">
-									<h2 class="mb-0">
-										<button type="button" class="btn btn-link"
-											data-toggle="collapse" data-target="#collapseTwo">
-											<i class="fa fa-plus"></i> View Details
-										</button>
-									</h2>
-								</div>
-								<div id="collapseTwo" class="collapse"
-									aria-labelledby="headingTwo" data-parent="#accordionExample">
-
-									<div class="table-responsive">
-										<table class="table table-striped table-sm table-hover">
-											<tbody>
-												<tr th:each="confCases : ${deathCasesByCountry}">
-													<td th:text="${confCases.country}"></td>
-													<td th:text="${confCases.totalCases}">0</td>
-												</tr>
-											</tbody>
-										</table>
-									</div>
-								</div>
-							</div>
-						</div>
+					<ul class="list-unstyled mt-3 mb-4">
+						<li style="color: orange; font-size: medium;">Confirmed Cases
+							by Country/Region</li>
+					</ul>
+					<div class="table-wrapper-scroll-y my-custom-scrollbar">
+						<table id="dtTotalDeathCase"
+							class="table table-striped table-bordered table-sm table-hover">
+							<thead>
+								<tr>
+									<th>Country</th>
+									<th>Total Cases</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr th:each="confCases : ${deathCasesByCountry}">
+									<td th:text="${confCases.country}"></td>
+									<td th:text="${confCases.totalCases}">0</td>
+								</tr>
+							</tbody>
+						</table>
 					</div>
 				</div>
 			</div>
@@ -160,40 +155,29 @@
 						th:text="${totalRecoveredReportedCases}" style="color: green;"></h1>
 					<ul class="list-unstyled mt-3 mb-4">
 						<li>New cases reported since previous day</li>
-						<h4 th:text="${totalRecoveredReportedNewCases}"
-							style="color: green;"></h4>
+						<h3 th:text="${totalRecoveredReportedNewCases}"
+							style="color: green;"></h3>
 					</ul>
-					<div class="bs-example">
-						<div class="accordion" id="accordionExample">
-							<div class="card">
-								<ul class="list-unstyled mt-3 mb-4">
-									<li>Confirmed Cases by Country/Region</li>
-								</ul>
-								<!-- <li th:each="confCases : ${confirmedCasesByCountry}"> -->
-								<div class="card-header" id="headingThree">
-									<h2 class="mb-0">
-										<button type="button" class="btn btn-link"
-											data-toggle="collapse" data-target="#collapseThree">
-											<i class="fa fa-plus"></i> View Details
-										</button>
-									</h2>
-								</div>
-								<div id="collapseThree" class="collapse"
-									aria-labelledby="headingThree" data-parent="#accordionExample">
-
-									<div class="table-responsive">
-										<table class="table table-striped table-sm table-hover">
-											<tbody>
-												<tr th:each="confCases : ${recoveredCasesByCountry}">
-													<td th:text="${confCases.country}"></td>
-													<td th:text="${confCases.totalCases}">0</td>
-												</tr>
-											</tbody>
-										</table>
-									</div>
-								</div>
-							</div>
-						</div>
+					<ul class="list-unstyled mt-3 mb-4">
+						<li style="color: green; font-size: medium;">Confirmed Cases
+							by Country/Region</li>
+					</ul>
+					<div class="table-wrapper-scroll-y my-custom-scrollbar">
+						<table id="dtTotalRecoveredCase"
+							class="table table-striped table-bordered table-sm table-hover">
+							<thead>
+								<tr>
+									<th>Country</th>
+									<th>Total Cases</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr th:each="confCases : ${recoveredCasesByCountry}">
+									<td th:text="${confCases.country}"></td>
+									<td th:text="${confCases.totalCases}">0</td>
+								</tr>
+							</tbody>
+						</table>
 					</div>
 				</div>
 			</div>
@@ -213,15 +197,18 @@
 					<div id="collapseOne" class="collapse" aria-labelledby="headingOne"
 						data-parent="#accordionExample">
 						<div class="card-body">
-							<h4>Coranavirus Total Confirmed Cases Details</h4>
-							<div class="table-responsive">
-								<table class="table table-striped table-sm table-hover">
+							<h4>Coranavirus Total Confirmed Cases</h4>
+							<div class="table-wrapper-scroll-y my-custom-scrollbar">
+								<!-- <table class="table table-striped table-sm table-hover"> -->
+								<table id="dtConfirmedCase"
+									class="table table-striped table-bordered table-sm table-hover"
+									cellspacing="0" width="100%">
 									<thead>
 										<tr>
-											<th>Country</th>
-											<th>State</th>
-											<th>Total Case Reported</th>
-											<th>Changes since last day</th>
+											<th>Country/Region</th>
+											<th>Province/State</th>
+											<th>Total Reported</th>
+											<th>Total Previous Day Changes</th>
 										</tr>
 									</thead>
 									<tbody>
@@ -249,15 +236,17 @@
 					<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
 						data-parent="#accordionExample">
 						<div class="card-body">
-							<h4>Coranavirus Total Death Cases Details</h4>
-							<div class="table-responsive">
-								<table class="table table-striped table-sm">
+							<h4>Coranavirus Total Death Cases</h4>
+							<div class="table-wrapper-scroll-y my-custom-scrollbar">
+								<table id="dtDeathCase"
+									class="table table-striped table-bordered table-sm table-hover"
+									cellspacing="0" width="100%">
 									<thead>
 										<tr>
-											<th>Country</th>
-											<th>State</th>
-											<th>Total Case Reported</th>
-											<th>Changes since last day</th>
+											<th>Country/Region</th>
+											<th>Province/State</th>
+											<th>Total Reported</th>
+											<th>Total Previous Day Changes</th>
 										</tr>
 									</thead>
 									<tbody>
@@ -285,15 +274,17 @@
 					<div id="collapseThree" class="collapse"
 						aria-labelledby="headingThree" data-parent="#accordionExample">
 						<div class="card-body">
-							<h4>Coranavirus Total Recovered Cases Details</h4>
-							<div class="table-responsive">
-								<table class="table table-striped table-sm">
+							<h4>Coranavirus Total Recovered Cases</h4>
+							<div class="table-wrapper-scroll-y my-custom-scrollbar">
+								<table id="dtRecoveredCase"
+									class="table table-striped table-bordered table-sm table-hover"
+									cellspacing="0" width="100%">
 									<thead>
 										<tr>
-											<th>Country</th>
-											<th>State</th>
-											<th>Total Case Reported</th>
-											<th>Changes since last day</th>
+											<th>Country/Region</th>
+											<th>Province/State</th>
+											<th>Total Reported</th>
+											<th>Total Previous Day Changes</th>
 										</tr>
 									</thead>
 									<tbody>
@@ -312,5 +303,43 @@
 			</div>
 		</div>
 	</div>
+	<script>
+		$(document).ready(function() {
+
+			$('#dtTotalConfirmedCase').DataTable({
+				"searching" : false,
+				"paging" : false,
+				"order" : [ [ 1, "desc" ] ]
+			});
+
+			$('#dtTotalDeathCase').DataTable({
+				"searching" : false,
+				"paging" : false,
+				"order" : [ [ 1, "desc" ] ]
+			});
+
+			$('#dtTotalRecoveredCase').DataTable({
+				"searching" : false,
+				"paging" : false,
+				"order" : [ [ 1, "desc" ] ]
+			});
+
+			$('#dtConfirmedCase').DataTable({
+				"paging" : false,
+				"order" : [ [ 2, "desc" ] ]
+			});
+
+			$('#dtDeathCase').DataTable({
+				"paging" : false,
+				"order" : [ [ 2, "desc" ] ]
+			});
+
+			$('#dtRecoveredCase').DataTable({
+				"paging" : false,
+				"order" : [ [ 2, "desc" ] ]
+			});
+
+		});
+	</script>
 </body>
 </html>
