--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 <meta name="viewport"
 	content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<title>Coranavirus Tracker Application(COVID-19)</title>
+<title>Novel Coronavirus COVID-19 Live Tracker Application</title>
 <link rel="stylesheet"
 	href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 <link rel="stylesheet"
@@ -73,7 +73,7 @@
 <body>
 	<div class="container">
 		<div class="jumbotron text-center" style="padding: 3%;">
-			<h1>Coranavirus Live Tracker Application(COVID-19)</h1>
+			<h1>Novel Coronavirus COVID-19 Live Tracker Application</h1>
 			<h3>Global Cases</h3>
 		</div>
 		<div class="card-deck mb-3 text-center">
@@ -197,7 +197,7 @@
 					<div id="collapseOne" class="collapse" aria-labelledby="headingOne"
 						data-parent="#accordionExample">
 						<div class="card-body">
-							<h4>Coranavirus Total Confirmed Cases</h4>
+							<h4>Coronavirus Total Confirmed Cases</h4>
 							<div class="table-wrapper-scroll-y my-custom-scrollbar">
 								<!-- <table class="table table-striped table-sm table-hover"> -->
 								<table id="dtConfirmedCase"
@@ -236,7 +236,7 @@
 					<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
 						data-parent="#accordionExample">
 						<div class="card-body">
-							<h4>Coranavirus Total Death Cases</h4>
+							<h4>Coronavirus Total Death Cases</h4>
 							<div class="table-wrapper-scroll-y my-custom-scrollbar">
 								<table id="dtDeathCase"
 									class="table table-striped table-bordered table-sm table-hover"
@@ -274,7 +274,7 @@
 					<div id="collapseThree" class="collapse"
 						aria-labelledby="headingThree" data-parent="#accordionExample">
 						<div class="card-body">
-							<h4>Coranavirus Total Recovered Cases</h4>
+							<h4>Coronavirus Total Recovered Cases</h4>
 							<div class="table-wrapper-scroll-y my-custom-scrollbar">
 								<table id="dtRecoveredCase"
 									class="table table-striped table-bordered table-sm table-hover"
