--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -189,7 +189,7 @@
 						<h2 class="mb-0">
 							<button type="button" class="btn btn-link" data-toggle="collapse"
 								data-target="#collapseOne">
-								<i class="fa fa-plus"></i> Confirmed Cases
+								<i class="fa fa-plus"></i>Global COVID-19 Confirmed Cases
 							</button>
 						</h2>
 					</div>
@@ -229,7 +229,7 @@
 						<h2 class="mb-0">
 							<button type="button" class="btn btn-link collapsed"
 								data-toggle="collapse" data-target="#collapseTwo">
-								<i class="fa fa-plus"></i> Death Cases
+								<i class="fa fa-plus"></i> Global COVID-19 Death Cases
 							</button>
 						</h2>
 					</div>
@@ -267,7 +267,7 @@
 						<h2 class="mb-0">
 							<button type="button" class="btn btn-link collapsed"
 								data-toggle="collapse" data-target="#collapseThree">
-								<i class="fa fa-plus"></i> Recovered Cases
+								<i class="fa fa-plus"></i>Global COVID-19 Recovered Cases
 							</button>
 						</h2>
 					</div>
